--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome to our page</title>
-    <link rel="stylesheet" href="/styleHome.css" />
-  </head>
-  <body>
-    <header>
-      <!-- Navbar -->
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <title>Welcome to our page</title>
+  <link rel="stylesheet" href="/styleHome.css">
+</head>
+<body>
+  <header>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <div class="container">
-      <!-- Page content -->
-      <h1>Welcome to our page</h1>
-      <p>This is a beautiful website created with HTML and CSS.</p>
-    </div>
-  </body>
+  <div class="container">
+    <!-- Page content -->
+    <h1>Welcome to our page</h1>
+    <p>This is a beautiful website created with HTML and CSS.</p>
+  </div>
+</body>
 </html>
