--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign In</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
   <body>
     <div class="container">
-      <form method="post" class="signin-form">
-        <h2>Sign In</h2>
+      <form method="post" class="signup-form">
+        <h2>Sign Up</h2>
+        <div class="form-group">
+          <input
+            type="text"
+            id="firstName"
+            name="firstName"
+            placeholder="First Name"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            id="lastName"
+            name="lastName"
+            placeholder="Last Name"
+            required
+          />
+        </div>
         <div class="form-group">
           <input
             type="text"
@@ -36,19 +54,9 @@
           />
         </div>
         <div class="form-group">
-          <button type="submit">Sign In</button>
-        </div>
-        <div class="form-group">
-          <button id="signUp" type="button">Sign Up</button>
+          <button type="submit">Sign Up</button>
         </div>
       </form>
     </div>
-    <script>
-      const button = document.querySelector("#signUp");
-      button.addEventListener("click", () => {
-        console.log("Sign Up");
-        window.location.href = "/signup";
-      });
-    </script>
   </body>
 </html>
