--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -11,8 +11,8 @@
         <div class="form-group">
           <input
             type="text"
-            id="firstName"
-            name="firstName"
+            id="first_name"
+            name="first_name"
             placeholder="First Name"
             required
           />
@@ -20,8 +20,8 @@
         <div class="form-group">
           <input
             type="text"
-            id="lastName"
-            name="lastName"
+            id="last_name"
+            name="last_name"
             placeholder="Last Name"
             required
           />
